demos/devdocs/0.59.0/nvdocument/index.md
# nvdocument

## Enumerations

| Enumeration                                                | Description |
| ---------------------------------------------------------- | ----------- |
| [COLORMAP_TYPE](enumerations/COLORMAP_TYPE.md)             | -           |
| [DRAG_MODE_PRIMARY](enumerations/DRAG_MODE_PRIMARY.md)     | -           |
| [DRAG_MODE_SECONDARY](enumerations/DRAG_MODE_SECONDARY.md) | -           |
| [SHOW_RENDER](enumerations/SHOW_RENDER.md)                 | -           |

## Type Aliases

| Type Alias                                               | Description     |
| -------------------------------------------------------- | --------------- |
| [DocumentData](type-aliases/DocumentData.md)             | -               |
| [ExportDocumentData](type-aliases/ExportDocumentData.md) | -               |
| [NVConfigOptions](type-aliases/NVConfigOptions.md)       | NVConfigOptions |
| [Scene](type-aliases/Scene.md)                           | -               |

## Variables

| Variable                                              | Description |
| ----------------------------------------------------- | ----------- |
| [DEFAULT_OPTIONS](variables/DEFAULT_OPTIONS.md)       | -           |
| [INITIAL_SCENE_DATA](variables/INITIAL_SCENE_DATA.md) | -           |
