demos/devdocs/0.61.0/nvdocument/index.md
# nvdocument

## Enumerations

| Enumeration                                    | Description |
| ---------------------------------------------- | ----------- |
| [COLORMAP_TYPE](enumerations/COLORMAP_TYPE.md) | -           |
| [PEN_TYPE](enumerations/PEN_TYPE.md)           | -           |
| [SHOW_RENDER](enumerations/SHOW_RENDER.md)     | -           |

## Interfaces

| Interface                                                  | Description                                                |
| ---------------------------------------------------------- | ---------------------------------------------------------- |
| [CompletedAngle](interfaces/CompletedAngle.md)             | Represents a completed angle measurement between two lines |
| [CompletedMeasurement](interfaces/CompletedMeasurement.md) | Represents a completed measurement between two points      |
| [MouseEventConfig](interfaces/MouseEventConfig.md)         | -                                                          |
| [TouchEventConfig](interfaces/TouchEventConfig.md)         | -                                                          |

## Type Aliases

| Type Alias                                               | Description     |
| -------------------------------------------------------- | --------------- |
| [DocumentData](type-aliases/DocumentData.md)             | -               |
| [ExportDocumentData](type-aliases/ExportDocumentData.md) | -               |
| [NVConfigOptions](type-aliases/NVConfigOptions.md)       | NVConfigOptions |
| [Scene](type-aliases/Scene.md)                           | -               |

## Variables

| Variable                                              | Description |
| ----------------------------------------------------- | ----------- |
| [DEFAULT_OPTIONS](variables/DEFAULT_OPTIONS.md)       | -           |
| [INITIAL_SCENE_DATA](variables/INITIAL_SCENE_DATA.md) | -           |
